--- a/ToDoList.html
+++ b/ToDoList.html
@@ -116,7 +116,7 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">SNo.</th>
+              <th scope="col">Serial No.</th>
               <th scope="col">Item Title</th>
               <th scope="col">Description</th>
               <th scope="col">Actions</th>
